--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -29,9 +29,17 @@ html {
   height: 100%;
 }
 
-#footer {
-  height: 20px;
-  margin-right: 10px;
+.footer {
+  background: #f5f5f5;
+  justify-content: end;
+}
+.footer .container {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+.footer .container ul {
+  list-style: none;
 }
 *,
 *:before,
