--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,7 +31,7 @@ html {
 
 .footer {
   background: #f5f5f5;
- 
+  margin: 40px;
 }
 .footer .container {
   display: flex;
@@ -40,6 +40,9 @@ html {
 }
 .footer .container ul {
   list-style: none;
+}
+.container li{
+  margin: 10px;
 }
 *,
 *:before,
